tests/fixtures/invalid/min_none_bytes.py
# Cannot call min() with None, Bytes
x = min(None, b"hello")
